
2003-11-16	Joel Becker <joel.becker@oracle.com>

	* configure.in: Substitute vendor/redhat/oracleasm.init.
	* vendor/redhat/Makefile: Move oracleasm.init to
		oracleasm.init.int
	* vendor/redhat/oracleasm-*.spec.in: %{libdir} stuff.
	* vendor/redhat/oracleasm.init{,.in}: Rename oracleasm.init to
		oracleasm.init.in.

2003-11-16	Joel Becker <joel.becker@oracle.com>

	* vendor/common/Makefile: Add oracleasm.sysconfig.
	* vendor/redhat/oracleasm-2.4.21-EL.spec.in: Add all the new
		init junk.  Fix ia64 build choices.
	* vendor/redhat/oracleasm-2.4.9-e.spec.in: Add the new init
		junk.
	* vendor/redhat/oracleasm.init: A path that will soon become
		configure bits.

2003-11-16	Joel Becker <joel.becker@oracle.com>

	* configure.in: Clean up force32 echo.
	* include/linux/asmcompat32.h: sys_ioctl() prototype.
	* kernel/oracleasm.c: sys_ioctl() prototype.
	* vendor/common/oracleasm.sysconfig: Default sysconfig.
	* vendor/common/oracleasm.init.functions: Configure functions.
	* vendor/redhat/oracleasm.init: Working vendorized script.

2003-11-13	Joel Becker <joel.becker@oracle.com>

	* vendor/common/oracleasm.init.functions.

2003-11-13	Joel Becker <joel.becker@oracle.com>

	* configure.in: vendor subdir.
	* vendor/common/Makefile: Added.
	* vendor/unitedlinux/Makefile: Added.
	* vendor/unitedlinux/oracleasm.init: Added.

2003-11-13	Joel Becker <joel.becker@oracle.com>

	* Makefile: Add vendor subdir.
	* vendor: Add vendor subdir.
	* redhat: Moved to vendor/redhat.
	* unitedlinux: Moved to vendor/unitedlinux.
	* vendor/common: Added.
	* vendor/redhat/Makefile: Adjust TOPDIR.

2003-11-13	Joel Becker <joel.becker@oracle.com>

	* configure.in: Added M64, USERM64, and --enable-force32.
	* Config.make.in: Added M64, USERM64.
	* kernel/Makefile: Added M64.
	* {tools,test,libosm}: Added USERM64.
	* kernel/oracleasm.c: sys_ioctl() prototype.
	* test/sizes.c: Added ppc.

2003-11-12	Joel Becker <joel.becker@oracle.com>

	* kernel/oracleasm.c: Fix SuSE builds.
